--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="/src/index.css" />
-    <title>Eleazar Muñoz | Portafolio</title>
+    <title>Eleazar Muñoz Portafolio</title>
   </head>
   <body>
     <div id="root"></div>
