cambie la fuente de el typewriter

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,500;12..96,800&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    
     <link rel="stylesheet" type="text/css" href="/src/index.css" />
     <title>Eleazar Muñoz Portafolio</title>
   </head>
