agregue el apartado del formulario y elimine lo de el boton para cambiar el tema

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -18,11 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap"
       rel="stylesheet"
     />
-    
+
     <link rel="stylesheet" type="text/css" href="/src/index.css" />
     <title>Eleazar Muñoz Portafolio</title>
   </head>
-  <body>
+  <body className="light">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
