--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap"
       rel="stylesheet"
     />
+
+    <!--JETBRAINS MONO-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+      rel="stylesheet"
+    />
     <!----INTER FONT-->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
