mejora del background

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="/src/index.css" />
     <title>Eleazar Muñoz Portafolio</title>
   </head>
-  <body className="light">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
