--- a/portafolio-tailwindcss/index.html
+++ b/portafolio-tailwindcss/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Eleazar Muñoz | Desarrollador Web Frontend</title>
+    <meta
+      name="description"
+      content="Portafolio profesional de Eleazar Muñoz, desarrollador web frontend apasionado por crear experiencias digitales únicas y modernas."
+    />
+    <meta
+      name="keywords"
+      content="Eleazar Muñoz, Portafolio, Desarrollador Web, Frontend, React, Tailwind CSS, Venezuela"
+    />
+    <meta name="author" content="Eleazar Muñoz" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eleazardavidmr.site/" />
+    <meta property="og:title" content="Eleazar Muñoz | Portafolio" />
+    <meta
+      property="og:description"
+      content="Explora mis proyectos y experiencia como desarrollador web frontend."
+    />
+    <meta property="og:image" content="/img/profile.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://eleazardavidmr.site/" />
+    <meta property="twitter:title" content="Eleazar Muñoz | Portafolio" />
+    <meta
+      property="twitter:description"
+      content="Explora mis proyectos y experiencia como desarrollador web frontend."
+    />
+    <meta property="twitter:image" content="/img/profile.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Eleazar Muñoz | Portafolio</title>
   </head>
   <body>
     <div id="root" class="font-inter"></div>
